<resources>
    <string name="app_name">calculatorimc</string>
    <string name="title_imc">Meu IMC</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="hint_weight">Peso (kg)</string>
    <string name="hint_height">Altura (m)</string>
    <string name="btn_calculate">Calcular IMC</string>
    <string name="logo_image_description">App logo</string>
    <string name="btn_signup">Cadastro</string>
    <string name="btn_logout">Sair</string>
    <string name="btn_history">Histórico</string>
    <string name="title_activity_history">Histórico de IMC</string>
    <string name="no_history_data">Nenhum registro de IMC encontrado</string>
    <string name="date_label">Data</string>
    <string name="weight_label">Peso</string>
    <string name="height_label">Altura</string>
    <string name="imc_label">IMC</string>
    <string name="category_label">Categoria</string>
</resources>